Fix some layout issues